2000-05-03  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Access.pm (list_access_check): Reindent slightly.

	* lib/Mj/Config.pm (parse_access_rules): Just use the stored class
	info that parse_taboo_* create instead of parsing the variables
	ourselves.
	Extract data from global variables as well.	

2000-05-02  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Config.pm (parse_taboo_body): Store all of the classes
	defined by any of the rules.
	(parse_taboo_headers): Ditto.

	* lib/Majordomo.pm (_make_list): Add a callback for
	_global_config_get, so global variables can be extracted internal
	to the list configuration.

	* lib/Mj/Config.pm (parse_access_rules): Extract the classes
        defined in taboo and admin rules and pass them into _compile_rule
        so they can be listed as legal variables.
	(_compile_rule): Don't blindly match against (admin|taboo)_ for
	legal variables; use the hash of variables passed in to us
	instead.

2000-04-21  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (owner_done): Handle new return from
	Bf::parse.  Build an intelligible message from all of the data we
	have available.

	* lib/Bf/Parser.pm (parse): Redo data passing.  Return information
	gleaned from envelope as well as hashref to data pulled from
	parsed bounces.
	(parse_dsn): Clean up and return bad address instead of complete
	content of final-/original-recipient line.

	* lib/Mj/MailOut.pm (owner_start): Name temp files $tmp/owner.*
	instead of $tmp/post.*.

2000-04-20  Michael Yount  <csf@moscow.com>

	* lib/Mj/CommandProps.pm, lib/Majordomo.pm:
	Tighten access to the "set" and "show" commands.  The new
	"default user" feature makes it possible not only to assume
	someone's identity, but also to see the result of commands
	that are issued.  Add list_access_check to the "set" core
	function, and change the default access for the "show"
	command from "mismatch" to "confirm."

	* lib/Mj/Token.pm: