@@ -1,3 +1,7 @@
+2000-05-04  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* lib/Mj/Config.pm (parse_restrict_post): Was completely broken.
+
 2000-05-03  Jason L Tibbitts III  <tibbs@math.uh.edu>
 
 	* lib/Mj/Access.pm (list_access_check): Reindent slightly.
